完成展列墙布局

--- a/index.html
+++ b/index.html
@@ -76,6 +76,98 @@
 <!--======== showcase =========-->
 <section class="showcase">
     <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <img src="img/gobang.jpg" alt="">
+                    <div class="over-layer">
+                        <h3 class="title">五子棋</h3>
+                        <p class="description">人机对战之「 五子棋 」<br/> 你能打败我吗？</p>
+                        <ul class="social-links">
+                            <li><a href="#" class="fa fa-download"></a></li>
+                            <li><a href="#" class="fa fa-link"></a></li>
+                            <li><a href="#" class="fa fa-search"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <img src="img/shushanke.jpg" alt="">
+                    <div class="over-layer">
+                        <h3 class="title">Web designer</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis tenetur veniam? Ad architecto asperiores blanditiis.</p>
+                        <ul class="social-links">
+                            <li><a href="#" class="fa fa-download"></a></li>
+                            <li><a href="#" class="fa fa-link"></a></li>
+                            <li><a href="#" class="fa fa-search"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <img src="img/baidu.jpg" alt="">
+                    <div class="over-layer">
+                        <h3 class="title">Web designer</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis tenetur veniam? Ad architecto asperiores blanditiis.</p>
+                        <ul class="social-links">
+                            <li><a href="#" class="fa fa-download"></a></li>
+                            <li><a href="#" class="fa fa-link"></a></li>
+                            <li><a href="#" class="fa fa-search"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <img src="img/yun.jpg" alt="">
+                    <div class="over-layer">
+                        <h3 class="title">Web designer</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis tenetur veniam? Ad architecto asperiores blanditiis.</p>
+                        <ul class="social-links">
+                            <li><a href="#" class="fa fa-download"></a></li>
+                            <li><a href="#" class="fa fa-link"></a></li>
+                            <li><a href="#" class="fa fa-search"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <img src="img/crash.jpg" alt="">
+                    <div class="over-layer">
+                        <h3 class="title">Web designer</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis tenetur veniam? Ad architecto asperiores blanditiis.</p>
+                        <ul class="social-links">
+                            <li><a href="#" class="fa fa-download"></a></li>
+                            <li><a href="#" class="fa fa-link"></a></li>
+                            <li><a href="#" class="fa fa-search"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <img src="img/2048.jpg" alt="">
+                    <div class="over-layer">
+                        <h3 class="title">Web designer</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis tenetur veniam? Ad architecto asperiores blanditiis.</p>
+                        <ul class="social-links">
+                            <li><a href="#" class="fa fa-download"></a></li>
+                            <li><a href="#" class="fa fa-link"></a></li>
+                            <li><a href="#" class="fa fa-search"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <!--======== end showcase =========-->
