修改联系标语

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center">
-                <h2 class="section-title">Contact And Message</h2>
+                <h2 class="section-title">你可以在下面这些地方找到我:)</h2>
                 <div class="border"><span class="border-l-r"><i class="fa fa-hand-o-down"></i></span></div>
                 <ul class="list-inline social-links text-center">
                     <li><a href="https://www.facebook.com/zeakhold" target="_blank"><img src="img/facebook.png" alt=""></a>
