padding-top撑开图片高度

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="box">
-                    <img src="img/gobang.jpg" alt="">
+                    <div class="cover">
+                        <img src="img/gobang.jpg" alt="">
+                    </div>
                     <div class="over-layer">
                         <h3 class="title">五子棋</h3>
                         <p class="description">人机对战之「 五子棋 」<br/> AI 说：<br/>你能打败我吗？</p>
@@ -93,7 +95,9 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="box">
-                    <img src="img/shushanke.jpg" alt="">
+                    <div class="cover">
+                        <img src="img/shushanke.jpg" alt="">
+                    </div>
                     <div class="over-layer">
                         <h3 class="title">蜀山客</h3>
                         <p class="description">徜徉于缤纷错乱的互联网世界<br/>记录些平日所思<br/>且歌，且行，且冥…</p>
@@ -107,7 +111,9 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="box">
-                    <img src="img/baidu.jpg" alt="">
+                    <div class="cover">
+                        <img src="img/baidu.jpg" alt="">
+                    </div>
                     <div class="over-layer">
                         <h3 class="title">百度前端技术学院</h3>
                         <p class="description">由百度招聘、EFE团队出品的<br/>面向大学生的前端技术学习平台<br/>布局，DOM，排序，搜索</p>
@@ -122,7 +128,9 @@
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="box">
-                    <img src="img/yun.jpg" alt="">
+                    <div class="cover">
+                        <img src="img/yun.jpg" alt="">
+                    </div>
                     <div class="over-layer">
                         <h3 class="title">云端通讯录</h3>
                         <p class="description">数据库课程设计作品<br/>一个基于Bootstrap的通讯录管理系统<br/>前后端协同开发</p>
@@ -136,7 +144,9 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="box">
-                    <img src="img/crash.jpg" alt="">
+                    <div class="cover">
+                        <img src="img/crash.jpg" alt="">
+                    </div>
                     <div class="over-layer">
                         <h3 class="title">Crash your Browser</h3>
                         <p class="description">温馨提示：<br/>请保存好电脑/手机上正在编辑的任务<br/>整人被打概不负责:)</p>
@@ -150,7 +160,9 @@
 
             <div class="col-md-4 col-sm-6">
                 <div class="box">
-                    <img src="img/2048.jpg" alt="">
+                    <div class="cover">
+                        <img src="img/2048.jpg" alt="">
+                    </div>
                     <div class="over-layer">
                         <h3 class="title">2048小游戏</h3>
                         <p class="description">一款有意思的算术小游戏<br/> 上下左右上下左右<br/>根本停不下来！</p>
