"百度前端技术学院"更换为"馆藏记忆"

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
             <div class="col-md-4 col-sm-6">
                 <div class="box">
                     <div class="cover">
-                        <img src="img/baidu.jpg" alt="">
+                        <img src="img/lib.jpg" alt="">
                     </div>
                     <div class="over-layer">
-                        <h3 class="title">百度前端技术学院</h3>
-                        <p class="description">由百度招聘、EFE团队出品的<br/>面向大学生的前端技术学习平台<br/>布局，DOM，排序，搜索</p>
+                        <h3 class="title">馆藏记忆</h3>
+                        <p class="description">广东工业大学图书馆--2017毕业纪念册<br/>大学四年与图书馆之间的故事<br/>移动端H5</p>
                         <ul class="social-links">
-                            <li><a href="http://lab.zeakhold.com/baidu-ife/" class="fa fa-link" target="_blank" title="访问链接"></a></li>
-                            <li><a href="https://github.com/zeakhold/baidu-ife" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>
+                            <li><a href="https://www.igdut.cn/" class="fa fa-link" target="_blank" title="访问链接"></a></li>
+                            <li><a href="https://github.com/zeakhold/lib" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>
                         </ul>
                     </div>
                 </div>
