--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
           type="image/x-icon"/>
 
     <!--======== All Stylesheet =========-->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -227,8 +227,8 @@
 <!--======== end footer =========-->
 
 <!--======== All Javascript =========-->
-<script src="js/jquery-2.1.1.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="http://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <script src="js/main.js"></script>
 </body>
