添加百度统计

--- a/index.html
+++ b/index.html
@@ -231,5 +231,7 @@
 <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <script src="js/main.js"></script>
+
+<script>var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="https://hm.baidu.com/hm.js?6850efefdd27066dbd7d053e39c22e36";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(hm,s)})();</script>
 </body>
 </html>
