[与我联系]:添加博客

--- a/index.html
+++ b/index.html
@@ -186,14 +186,12 @@
                 <h2 class="section-title">你可以在下面这些地方找到我:)</h2>
                 <div class="border"><span class="border-l-r"><i class="fa fa-hand-o-down"></i></span></div>
                 <ul class="list-inline social-links text-center">
-                    <li><a href="https://www.facebook.com/zeakhold" target="_blank"><img src="img/facebook.png" alt=""></a>
-                    </li>
+                    <li><a href="https://www.facebook.com/zeakhold" target="_blank"><img src="img/facebook.png" alt=""></a></li>
                     <li><a href="mailto:hi@zeakhold.com" target="_blank"><img src="img/email.png" alt=""></a></li>
-                    <li><a href="https://www.zhihu.com/people/zeakhold" target="_blank"><img src="img/zhihu.png" alt=""></a>
-                    </li>
+                    <li><a href="http://www.zeakhold.com/" target="_blank"><img src="img/shan.png" alt=""></a></li>
+                    <li><a href="https://www.zhihu.com/people/zeakhold" target="_blank"><img src="img/zhihu.png" alt=""></a></li>
                     <li><a href="https://github.com/zeakhold" target="_blank"><img src="img/gitHub.png" alt=""></a></li>
-                    <li><a href="tencent://message/?uin=1192188934&amp;Site=&amp;Menu=yes"><img src="img/qq.png" alt=""></a>
-                    </li>
+                    <li><a href="tencent://message/?uin=1192188934&amp;Site=&amp;Menu=yes"><img src="img/qq.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
