添加:演示站Demo

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <!--======== showcase =========-->
 <section class="showcase">
     <div class="container">
+        <!--第一行-->
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="box">
@@ -125,6 +126,8 @@
                 </div>
             </div>
         </div>
+
+        <!--第二行-->
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="box">
@@ -173,6 +176,27 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!--第三行-->
+        <div class="row">
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <div class="cover">
+                        <img src="img/demo.jpg" alt="">
+                    </div>
+                    <div class="over-layer">
+                        <h3 class="title">演示站</h3>
+                        <p class="description">一些小案例的集合仓库<br/>移动Web适配、清除浮动、Web Worker等等...</p>
+                        <ul class="social-links">
+                            <li><a href="http://lab.zeakhold.com/demo/" class="fa fa-link" target="_blank" title="访问链接"></a></li>
+                            <li><a href="https://github.com/zeakhold/demo" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </section>
