--- a/index.html
+++ b/index.html
@@ -196,6 +196,22 @@
                 </div>
             </div>
 
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <div class="cover">
+                        <img src="img/baidu.jpg" alt="">
+                    </div>
+                    <div class="over-layer">
+                        <h3 class="title">百度前端技术学院</h3>
+                        <p class="description">由百度前端团队出品的<br/>前端技术学习平台<br/>实践：Flexbox 布局、排序、搜索...</p>
+                        <ul class="social-links">
+                            <li><a href="http://lab.zeakhold.com/baidu-ife/" class="fa fa-link" target="_blank" title="访问链接"></a></li>
+                            <li><a href="https://github.com/zeakhold/baidu-ife" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </div>
