--- a/index.html
+++ b/index.html
@@ -215,14 +215,33 @@
             <div class="col-md-4 col-sm-6">
                 <div class="box">
                     <div class="cover">
+                        <img src="img/extension.jpg" alt="">
+                    </div>
+                    <div class="over-layer">
+                        <h3 class="title">Chrome天气预报扩展</h3>
+                        <p class="description">提供六天天气预报(包括昨天)<br/>显示天气、温度、风速及当天空气质量等信息</p>
+                        <ul class="social-links">
+                            <li><a href="http://www.zeakhold.com/258.html" class="fa fa-link" target="_blank" title="访问链接"></a></li>
+                            <li><a href="https://github.com/zeakhold/chrome-extension" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--第四行-->
+        <div class="row">
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <div class="cover">
                         <img src="img/creating.jpg" alt="">
                     </div>
                     <div class="over-layer">
                         <h3 class="title">Creating</h3>
                         <p class="description">更多idea<br/>正在开发中<br/>敬请期待！</p>
                         <!--<ul class="social-links">-->
-                            <!--<li><a href="#" class="fa fa-link" target="_blank" title="访问链接"></a></li>-->
-                            <!--<li><a href="#" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>-->
+                        <!--<li><a href="#" class="fa fa-link" target="_blank" title="访问链接"></a></li>-->
+                        <!--<li><a href="#" class="fa fa-github-alt" target="_blank" title="查看代码"></a></li>-->
                         <!--</ul>-->
                     </div>
                 </div>
